--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 
 <% posts.forEach(function(post){ %>
   <h3><%= post.title %></h3>
-  <p><%= post.body.substring(0,100) + "..." %><a href="/posts/<%= post.title %>">Read more</a></p>
+  <p><%= post.post.substring(0,100) + "..." %><a href="/posts/<%= post._id %>">Read more</a></p>
 <% }); %>
 
 
